--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -24,6 +24,11 @@ ul {
     text-align: left;
     list-style-type: none;
     font-family: 'Josefin Slab', serif;
+    font-size: 16px;
+}
+
+#slogan {
+	font-size: 16px;
 }
 
 .link {
