--- a/unit_3_v2/css/style.css
+++ b/unit_3_v2/css/style.css
@@ -1,44 +1,42 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:300);
+@import url(https://fonts.googleapis.com/css?family=Abril+Fatface);
+
 body {
-	background: url("../images/background_2.jpg");
+	background: url("../images/background_2.jpg") no-repeat center center fixed;
 	background-size: cover;
-	padding-top: 10px;
+	padding-top: 7px;
 	padding-left: 38px;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	font-size: 15px;
+	color: #000;
 }
 
 h1 {
 	font-family: 'Abril Fatface', cursive;
 	font-weight: 100;
-	font-size:30px;
+	font-size: 28px;
 	text-transform: uppercase;
-	color: #000;
 }
 
-p {
-	font-family: 'Abril Fatface', cursive;
-	font-weight: 100;
-	font-size: 16px;
-	color: #000;
+h2 {
+	font-family: inherit;
+	font-size: 15px;
+	letter-spacing: 1px;
+	margin-top: 25px;
+}
+
+a {
+	text-decoration: none;
+	color: inherit;
 }
 
 ul {
     text-align: left;
+    padding-left: 34px;
     list-style-type: none;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    font-size: 16px;
 }
 
-#slogan {
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 16px;
-}
-
-.link {
-	color: #000; 
-	text-decoration: none;
-}
-
-.title {
-	letter-spacing: .5px;
+li {
+	margin-bottom: 15px;
 }
