--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -25,12 +25,13 @@ section {
 	background-color: #E4F4FA;
     width: 80%;
     margin: auto;
-    clear: both;
 }
 
 section img {
-	max-width: 100%;
-	max-height: 100%;
+	/* max-width: 100%; */
+	/* max-height: 100%; */
+	width: 100%;
+	height: 100%;
 }
 
 footer {
@@ -76,77 +77,79 @@ li span {
    height: 0; 
    clear: both;
 }
-
+section a {
+	padding:.5em;
+}
 #project1 {
-	background-color: #5F9F9F;
+	/* background-color: #5F9F9F; */
 	float: left;
-	width: 39%;
+	width: 40%;
 	height: 10em;
-	margin: .5%;
+	/* margin: .5%; */
 }
 
 #project2 {
-	background-color: #B4CDCD;
+	/* background-color: #B4CDCD; */
 	float: right;
-	width: 59%;
-	height: 20.5em;
-	margin: .5%;
-	clear: right;
+	width: 60%;
+	height: 20em;
+	/* margin: .5%; */
+	/* clear: right; */
 }
 
 #project3 {
-	background-color: #668B8B;
+	/* background-color: #668B8B; */
 	float: left;
-	width: 39%;
+	width: 40%;
 	height: 10em;
-	margin: .5%;
+	/* margin: .5%; */
 }
 
 #project4 {
-	background-color: #2F4F4F;
+	/* background-color: #2F4F4F; */
 	float: left;
-	width: 39%;
-	height: 20.5em;
-	margin: .5%;
-	clear: left;
+	width: 40%;
+	height: 20em;
+	/* margin: .5%; */
+	/* clear: left; */
 }
 
 #project5 {
-	background-color: #838B8B;
+	/* background-color: #838B8B; */
 	float: left;
-	width: 29%;
+	width: 30%;
 	height: 10em;
-	margin: .5%;
+	/* margin: .5%; */
 }
 
 #project6 {
-	background-color: #C1CDCD;
+	/* background-color: #C1CDCD; */
 	float: left;
-	width: 29%;
+	width: 30%;
 	height: 10em;
-	margin: .5%;
+	/* margin: .5%; */
 }
 
 #project7 {
-	background-color: #5F9F9F;
+	/* background-color: #5F9F9F; */
 	float: left;
-	width: 29%;
+	width: 30%;
 	height: 10em;
-	margin: .5%;
+	/* margin: .5%; */
 }
 
 #project8 {
-	background-color: #2F4F4F;
+	/* background-color: #2F4F4F; */
 	float: right;
-	width: 29%;
-	height: 20.5em;
-	margin: .5%;
+	width: 30%;
+	height: 20em;
+	/* margin: .5%; */
 }
 
 #project9 {
-	background-color: #668B8B;
+	/* background-color: #668B8B; */
 	float: left;
-	width: 69%;
+	width: 70%;
 	height: 10em;
-	margin: .5%;
+	/* margin: .5%; */
 }
