--- a/unit_6/css/style.css
+++ b/unit_6/css/style.css
@@ -4,21 +4,23 @@
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
-	background: url("../images/background_2.jpg") no-repeat center center fixed;
+	background-color: #FFF, no-repeat center center fixed;
 	background-size: cover;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 16px;
 	color: #222;
 }
+
 header {
-	padding-top: 1em;
+	padding-top: 2em;
     margin-left: 10%;
 }
 
 nav {
-    float: right;
-    margin-right: 10%;
+    float: left;
+    padding-top: 1em;
+    margin-left: 10%;
 }
 
 section {
@@ -35,15 +37,16 @@ section img {
 
 footer {
 	background-color: #FFF;
-	padding: 1em 0em 1em .25em;
-	margin: 1em 10% 1em 10%;
+	padding-top: 3em;
+	padding-bottom: 4em;
+	margin-left: 10%
 }
 
 h1 {
 	font-family: 'Abril Fatface', cursive;
 	font-weight: 100;
 	font-size: 1.75em;
-	text-transform: uppercase;
+	text-transform: none;
 }
 
 p {
@@ -61,8 +64,8 @@ ol {
 
 li {
 	float: left;
-	padding: .5em 0em .5em .5em;
-	margin-bottom: 1em;
+	padding: .5em .5em .5em 0em;
+	margin-bottom: 2em;
 }
 
 li span {
@@ -77,75 +80,34 @@ li span {
    clear: both;
 }
 
-#project1 {
-	background: url("../images/background_2.jpg")
+.project1to1 {
 	float: left;
-	width: 39%;
-	margin: .5%;
+	width: 25%;
 }
 
-#project2 {
-	background-color: #B4CDCD;
+.project2to2 {
+	float: left;
+	width: 50%;
+}
+
+.project1to2 {
 	float: right;
-	width: 59%;
-	height: 20.5em;
-	margin: .5%;
-	clear: right;
+	width: 25%;
 }
 
-#project3 {
-	background-color: #668B8B;
+.project2to1 {
 	float: left;
-	width: 39%;
-	height: 10em;
-	margin: .5%;
+	width: 50%;
 }
 
-#project4 {
-	background-color: #2F4F4F;
-	float: left;
-	width: 39%;
-	height: 20.5em;
-	margin: .5%;
-	clear: left;
-}
-
-#project5 {
-	background-color: #838B8B;
-	float: left;
-	width: 29%;
-	height: 10em;
-	margin: .5%;
-}
-
-#project6 {
-	background-color: #C1CDCD;
-	float: left;
-	width: 29%;
-	height: 10em;
-	margin: .5%;
-}
-
-#project7 {
-	background-color: #5F9F9F;
-	float: left;
-	width: 29%;
-	height: 10em;
-	margin: .5%;
-}
-
-#project8 {
-	background-color: #2F4F4F;
+.project3to2 {
 	float: right;
-	width: 29%;
-	height: 20.5em;
-	margin: .5%;
+	width: 75%;
 }
 
-#project9 {
-	background-color: #668B8B;
+.project3to2l {
 	float: left;
-	width: 69%;
-	height: 10em;
-	margin: .5%;
+	width: 75%;
 }
+
+
