--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -1,14 +1,14 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300);
-@import url(https://fonts.googleapis.com/css?family=Abril+Fatface);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:700);
+@import url(https://fonts.googleapis.com/css?family=Lusitana:400);
 
 * { margin:0; padding:0; box-sizing:border-box; }
 
 body {
 	background-color: #FFF, no-repeat center center fixed;
 	background-size: cover;
-	font-family: 'Lato', sans-serif;
-	font-weight: 300;
-	font-size: 16px;
+	font-family: 'Lusitana', sans-serif;
+	font-weight: 400;
+	font-size: 14px;
 	color: #222;
 }
 
@@ -24,7 +24,7 @@ nav {
 }
 
 section {
-	background-color: #E4F4FA;
+	background-color: #FFF;
     width: 80%;
     margin: auto;
     clear: both;
@@ -39,18 +39,19 @@ footer {
 	background-color: #FFF;
 	padding-top: 3em;
 	padding-bottom: 4em;
-	margin-left: 10%
+	margin-left: 10%;
 }
 
 h1 {
-	font-family: 'Abril Fatface', cursive;
-	font-weight: 100;
-	font-size: 1.75em;
-	text-transform: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	font-size: 1.5em;
+	text-transform: uppercase;
+	letter-spacing: .8em;
 }
 
 p {
-	letter-spacing: .15em;
+	letter-spacing: .1em;
 }
 
 a {
@@ -70,6 +71,13 @@ li {
 
 li span {
 	color: #0095b6;
+}
+
+hr {
+	border: none;
+	height: .05em;
+	background: #D3D3D3;
+	margin-bottom: 2em;
 }
 
 .clearfix:after { 
@@ -110,6 +118,25 @@ li span {
 	width: 75%;
 }
 
+.projecttext {
+	width: 90%;
+	margin-bottom: 1.5em;
+}
+
+.projectpage {
+	margin-bottom: 1.5em;
+}
+
+.projectmain {
+  float: left;
+  width: 50%;
+}
+
+.projectsidebar {
+  float: left;
+  width: 50%;
+}
+
 @media only screen and (max-width: 600px) {
 	body {
 		font-size: 14px;
@@ -123,6 +150,11 @@ li span {
 	display: block;
 	float: none;
 	margin-bottom: .25em;
+	}
+
+	hr {
+		display: inline;
+	/*Why isn't this appearing?*/
 	}
 }
 
